# ece3210-pybind11-ex

./: CMakeLists.txt  README.md
include/: array_ops.h
python/: ece3210_lab01_ex.py  ece3210_pybind11_ex.py  test_pybind11_ex.py
src/: array_ops.c  main.cpp
